welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: value update is not a member of java.awt.Color
if(getCouleurSol()=Color.green){baisseBrosse;leveBrosse}else{recule();}
   ^SlugTracking:6: error: not found: value esSurBiscuit
return esSurBiscuit();
       ^